err/django-staticblog.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/django_staticblog-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/html2text'...
Listing './lib/python3.5/site-packages/html2text-2018.1.9.dist-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/staticblog'...
Listing './lib/python3.5/site-packages/staticblog/management'...
Listing './lib/python3.5/site-packages/staticblog/management/commands'...
Compiling './lib/python3.5/site-packages/staticblog/management/commands/import_tumblr.py'...
***   File "./lib/python3.5/site-packages/staticblog/management/commands/import_tumblr.py", line 16
    print 'Incorrect arguments'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/staticblog/management/commands/update_blog.py'...
***   File "./lib/python3.5/site-packages/staticblog/management/commands/update_blog.py", line 39
    print 'Compiling all blog posts'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/staticblog/templates'...
Listing './lib/python3.5/site-packages/staticblog/templates/staticblog'...
Compiling './lib/python3.5/site-packages/staticblog/views.py'...
***   File "./lib/python3.5/site-packages/staticblog/views.py", line 79
    print str(e)
            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
